# ESP32-DualCAN

./: .gitattributes  .gitignore  .gitmodules  ESP32-DualCAN.code-workspace  ESP32-DualCAN.kicad_pcb  ESP32-DualCAN.kicad_pro  ESP32-DualCAN.kicad_sch  Makefile  README.md  fp-lib-table  sym-lib-table
.github/workflows/: firmware.yml  hardware.yml  prerelease.yml  release.yml  webui.yml
PCB/: ESP32-DualCAN.kicad_pcb
PCB/KiCad-Waveshare-ESP32/: Waveshare-ESP32.kicad_sym
PCB/KiCad-Waveshare-ESP32/Waveshare-ESP32.pretty/: Waveshare-ESP32-C3-Zero.kicad_mod  (+1 more)
PCB/footprints/: CONN_0705510040.step  CONN_705530005.step  CONN_705530005_06_MOL.kicad_mod  ESP32-C6-SuperMini.kicad_mod
dbc/: Model3_CH.dbc  Model3_PARTY.dbc  Model3_VEH.dbc
docs/: ble.md  button.md  maintenance.md  scripting.md  tesla-ble.md
firmware/: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.release
firmware/components/berry/: CMakeLists.txt
firmware/components/berry/generate/: be_const_strtab.h  be_const_strtab_def.h
firmware/components/berry/port/: be_port.c  berry_conf.h
firmware/components/berry/scripts/: update_berry.sh
firmware/components/tesla-ble/: CMakeLists.txt
firmware/dbc/: tesla_model3_vehicle.dbc  tesla_model3_y_dedup.dbc
firmware/scripts/: decode_panic.sh  device_smoke.sh  parse_check_examples.sh
firmware/scripts_examples/: bench_test.be  hello_log.be  light_flash_horn_beep.be  loopback_led.be  preprocessor_demo.be  tesla_blink_hazards_tile.be  tesla_das_bodycontrols_loopback.be  tesla_doors_sim.be  tesla_fold_mirror_raw.be  tesla_fold_mirror_tile.be  tesla_gear_led_demo.be  track_mode_on_full_throttle.be  window_drop_on_handle_pull.be  window_vent_to_full_open.be
firmware/src/: CMakeLists.txt  idf_component.yml  main.c
firmware/test/: unity_config.cpp  unity_config.h
firmware/test_scripts/: bench_test.be  preprocessor_demo.be  tesla_das_bodycontrols_loopback.be
firmware/tools/: dbc2bin.py  decode_panic.sh  device_smoke.sh  parse_check.c  parse_check_examples.sh  sdkconfig_freshness.py  sync_submodules.py  version.py
footprints/: CONN_1719760000-SD_06_MOL.kicad_mod  CONN_1719760000.step  CONN_70551-xxxx_06_MOL.kicad_mod
hardware/: .gitignore  ESP32-DualCAN.kicad_pcb  ESP32-DualCAN.kicad_pro  ESP32-DualCAN.kicad_sch  fp-lib-table
hardware/case/: case.FCStd
scripts/: setup-hooks.sh
scripts/git-hooks/: pre-commit
scripts/tesla/: easy_entry_window_drop.be  tiles_demo.be  track_mode_on_full_throttle.be
tests/: test_invariant_AIView.svelte
tools/: setup-hooks.sh
tools/git-hooks/: pre-commit
webui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
webui-v1/: index.html  package-lock.json  tsconfig.app.json
webui-v1/src/: App.svelte  app.css  examples.ts
webui/public/: manifest.json  sw.js
webui/src/: App.svelte  app.css  dbcStore.svelte.ts  examples.ts  main.ts
webui/tests/: capture.test.ts  examples.test.ts  preprocessor.test.ts  protocol-roundtrip.spec.ts  protocol-roundtrip.test.ts  ui-smoke.spec.ts
(+131 files in other folders)
